# supply_chain_reference

./: README.md
bazel_rust/: .bazelrc  BUILD.bazel  WORKSPACE
diagrams/: Monolith.drawio  Monolith_Architecture.drawio  Monolith_domain_function.drawio  String_reference_count  String_representation.drawio  rpc.drawio  (+6 more)
rust_web_service/: .env  Cargo.toml  settings.toml
rust_web_service/examples/: orders.rs
rust_web_service/migrations/2022-01-21-220321_create_orders/: up.sql
rust_web_service/migrations/2022-03-21-204815_create_orderlines/: up.sql
rust_web_service/src/: main.rs  models.rs
rust_web_service/src/api/: core_handler.rs  order_handler.rs  product_handler.rs  stock_handler.rs
rust_web_service/src/carrier/: mod.rs
rust_web_service/src/config/: mod.rs
rust_web_service/src/data/: base.rs  mod.rs  order_datastore.rs  orders.rs  products.rs  stock.rs
rust_web_service/src/datastore/: mod.rs  order_datastore.rs
rust_web_service/src/handlers/: core_handler.rs  endpoints.rs  handlers.rs  mod.rs  order_handler.rs  product_handler.rs  stock_handler.rs
rust_web_service/src/inventory/: mod.rs
rust_web_service/src/order/: datastore.rs  mod.rs
rust_web_service/src/product/: datastore.rs  mod.rs
rust_web_service/src/products/: mod.rs
rust_web_service/src/services/: mod.rs  order_service.rs  product_service.rs  stock_service.rs
rust_web_service/src/warehouse/: mod.rs
rust_web_service/src/web_server/: endpoints.rs  handlers.rs  mod.rs  order_handler.rs
rust_web_service/src/web_service/: mod.rs
rust_web_service/tests/: integration_tests.rs
(+102 files in other folders)
